--- a/style.css
+++ b/style.css
@@ -52,6 +52,14 @@ img{
     margin: 30px 0;
 }
 
+.secondary-btn{
+    background-color: #FF900E;
+    padding: 40px;
+    border: none;
+    border-radius: 10px;
+    color: white;
+}
+
 
 
 /* header style */
@@ -131,6 +139,8 @@ img{
     gap: 100px;
     
 }
+
+
 .portfolio-text{
     width: 600px;
 }
@@ -145,6 +155,24 @@ img{
     box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
     border-radius: 8px;
     padding: 30px;
+}
+
+.portfoli-body{
+    position: relative
+}
+.secondary-btn{
+    position: absolute;
+    right: 400px;
+    bottom: 16px;
+}
+
+.secondary-btn h2{
+    font-weight: 700;
+    font-size: 65px;
+}
+.secondary-btn h4{
+    font-weight: 700;
+    font-size: 25px;
 }
 
 
